--- a/.github/workflows/docs-sched-rebuild.yaml
+++ b/.github/workflows/docs-sched-rebuild.yaml
@@ -21,17 +21,17 @@ jobs:
       - name: Install Ubuntu packages
         run: |
           sudo apt-get update -y
-          sudo apt-get install -y pandoc doxygen
+          sudo apt-get install -y doxygen
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           python -m pip install -r docs/requirements-doc.txt
       - name: Report the versions to build
         run: |
-          sphinx-multiversion --dump-metadata docs/source docs/build/html | jq "keys"
+          sphinx-multiversion -D 'exhale_args.containmentFolder=${sourcedir}/api' --dump-metadata docs/source docs/build/html | jq "keys"
       - name: Building docs (multiversion)
         run: |
-          sphinx-multiversion docs/source docs/build/html
+          sphinx-multiversion -D 'exhale_args.containmentFolder=${sourcedir}/api' docs/source docs/build/html
       - name: Upload HTML
         uses: actions/upload-artifact@v2
         with:
