[Opt] remove `cudaHostAllocWriteCombined` to avoid exception on some scenarios.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,14 +55,23 @@ foreach(cuda_arch ${sm})
   list(APPEND cuda_arch_list ${cuda_arch})
   message(STATUS "Assign GPU architecture (sm=${cuda_arch})")
 endforeach()
+
 list(LENGTH cuda_arch_list cuda_arch_list_length)
 if(cuda_arch_list_length EQUAL 0)
   list(APPEND cuda_arch_list "80")
   message(STATUS "Assign default GPU architecture sm=80")
 endif()
+
+if (CMAKE_BUILD_TYPE STREQUAL "Debug")
+  add_compile_definitions(CUDA_ERROR_CHECK)
+  set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -lineinfo")
+endif()
+
 foreach(cuda_arch ${cuda_arch_list})
   set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -gencode arch=compute_${cuda_arch},code=sm_${cuda_arch}")
 endforeach()
+
+message(CMAKE_CUDA_FLAGS="${CMAKE_CUDA_FLAGS}")
 
 include_directories(
   ${PROJECT_SOURCE_DIR}/include
