--- a/include/BUILD
+++ b/include/BUILD
@@ -1,6 +1,6 @@
-load("@local_config_cuda//cuda:build_defs.bzl", "cuda_library")
+load("@local_config_cuda//cuda:build_defs.bzl", "cuda_cc_library")
 
-cuda_library(
+cuda_cc_library(
     name = "merlin_localfile",
     hdrs = [
         "merlin_localfile.hpp",
@@ -14,7 +14,7 @@ cuda_library(
     ],
 )
 
-cuda_library(
+cuda_cc_library(
     name = "merlin_hashtable",
     hdrs = [
         "merlin_hashtable.cuh",
