[Feat] Support to lock the key in find_or_insert_ptr & unlock_keys API

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -168,3 +168,8 @@ TARGET_LINK_LIBRARIES(reserved_keys_test gtest_main)
 add_executable(export_batch_if_test tests/export_batch_if_test.cc.cu)
 target_compile_features(export_batch_if_test PUBLIC cxx_std_14)
 set_target_properties(export_batch_if_test PROPERTIES  CUDA_ARCHITECTURES OFF)
+
+add_executable(find_or_insert_ptr_lock_test tests/find_or_insert_ptr_lock_test.cc.cu)
+target_compile_features(find_or_insert_ptr_lock_test PUBLIC cxx_std_14)
+set_target_properties(find_or_insert_ptr_lock_test PROPERTIES  CUDA_ARCHITECTURES OFF)
+TARGET_LINK_LIBRARIES(find_or_insert_ptr_lock_test gtest_main)
