[FEA] Support lock_keys API and its unit test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -173,3 +173,8 @@ add_executable(find_or_insert_ptr_lock_test tests/find_or_insert_ptr_lock_test.c
 target_compile_features(find_or_insert_ptr_lock_test PUBLIC cxx_std_14)
 set_target_properties(find_or_insert_ptr_lock_test PROPERTIES  CUDA_ARCHITECTURES OFF)
 TARGET_LINK_LIBRARIES(find_or_insert_ptr_lock_test gtest_main)
+
+add_executable(lock_unlock_test tests/lock_unlock_test.cc.cu)
+target_compile_features(lock_unlock_test PUBLIC cxx_std_14)
+set_target_properties(lock_unlock_test PROPERTIES  CUDA_ARCHITECTURES OFF)
+TARGET_LINK_LIBRARIES(lock_unlock_test gtest_main)
