--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -104,6 +104,11 @@ target_compile_features(merlin_hashtable_test PUBLIC cxx_std_14)
 set_target_properties(merlin_hashtable_test PROPERTIES  CUDA_ARCHITECTURES OFF)
 TARGET_LINK_LIBRARIES(merlin_hashtable_test gtest_main)
 
+add_executable(merlin_hashtable_device_api_test tests/merlin_hashtable_device_api_test.cc.cu)
+target_compile_features(merlin_hashtable_device_api_test PUBLIC cxx_std_14)
+set_target_properties(merlin_hashtable_device_api_test PROPERTIES  CUDA_ARCHITECTURES OFF)
+TARGET_LINK_LIBRARIES(merlin_hashtable_device_api_test gtest_main)
+
 add_executable(find_or_insert_test tests/find_or_insert_test.cc.cu)
 target_compile_features(find_or_insert_test PUBLIC cxx_std_14)
 set_target_properties(find_or_insert_test PROPERTIES  CUDA_ARCHITECTURES OFF)
